# dbx-marker

./: GitVersion.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  release.yml
src/dbx_marker/: __init__.py  config.py  exceptions.py  manager.py  sqls.py  utils.py
tests/: conftest.py  test_dbx_marker_manager.py  test_manager_delete_marker.py  test_manager_get_marker.py  test_manager_initialize_table.py  test_manager_update_marker.py  test_utils_parse_marker_from_type.py
