[project]
name = "dbx-marker"
version = "0.1.0"
description = "Easily manage incremental progress, watermarks, and checkpoints in your Databricks data pipelines"
authors = [
    {name = "Jelther Goncalves", email = "hello@jelther.dev"},
]
dependencies = ["delta-spark>=3.3.0", "pyspark>=3.5.4", "loguru>=0.7.3"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT License"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.scripts]
fmt = "black src/"
lint = "flake8 src/"
test = "pytest tests/"
cov = "pytest --cov=src --cov-report html tests/ "
[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "pytest-cov>=6.0.0",
]

